--- a/scss/mixins/_forms.scss
+++ b/scss/mixins/_forms.scss
@@ -3,11 +3,10 @@
 // Used in _forms.scss to generate the form validation CSS for warnings, errors,
 // and successes.
 
-@mixin form-control-validation($color-name) {
-    $color:        palette-context($color-name);
-    $bg:           palette-context($color-name, $level-context-bg);
-    $border:       palette-context($color-name, $level-context-border-color);
-    $border-hover: palette-context($color-name, $level-context-hover-border-color);
+@mixin form-control-validation($color) {
+    $bg:           palette($color, $level-context-bg);
+    $border:       palette($color, $level-context-border-color);
+    $border-hover: palette($color, $level-context-hover-border-color);
 
     // Color the label and help text
     .form-control-feedback,
