--- a/scss/component/_alert.scss
+++ b/scss/component/_alert.scss
@@ -29,11 +29,11 @@
 }
 
 // Contextual modifiers
-@each $theme, $colors in $context-themes {
-    $bg:          map-get($colors, "context-bg");
-    $color:       map-get($colors, "context-color");
-    $border:      map-get($colors, "context-border-color");
-    $hover-color: map-get($colors, "context-hover-color");
+@each $theme, $colors in $alert-themes {
+    $bg:          map-get($colors, "bg");
+    $color:       map-get($colors, "color");
+    $border:      map-get($colors, "border-color");
+    $hover-color: map-get($colors, "hover-color");
 
     $color:       color-if-contrast($color, $bg);
     $hover-color: color-if-contrast($hover-color, $bg);
