--- a/scss/component/_list.scss
+++ b/scss/component/_list.scss
@@ -293,13 +293,13 @@ button.list-item-action {
 // Contextual variants
 // Add modifier classes to change text and background color on individual items.
 // Organizationally, this must come after the `:hover` states.
-@each $theme, $colors in $context-themes {
-    $bg:           map-get($colors, "context-bg");
-    $color:        map-get($colors, "context-color");
-    $border:       map-get($colors, "context-border-color");
-    $hover-bg:     map-get($colors, "context-hover-bg");
-    $hover-color:  map-get($colors, "context-hover-color");
-    $hover-border: map-get($colors, "context-hover-border-color");
+@each $theme, $colors in $list-themes {
+    $bg:           map-get($colors, "bg");
+    $color:        map-get($colors, "color");
+    $border:       map-get($colors, "border-color");
+    $hover-bg:     map-get($colors, "hover-bg");
+    $hover-color:  map-get($colors, "hover-color");
+    $hover-border: map-get($colors, "hover-border-color");
 
     $color:       color-if-contrast($color, $bg);
     $hover-color: color-if-contrast($hover-color, $hover-bg);
