--- a/scss/mixins/_switch.scss
+++ b/scss/mixins/_switch.scss
@@ -1,15 +1,7 @@
 // Switch color variants
-@mixin switch-variant($indicator-bg, $active-control-bg, $active-indicator-bg) {
-    .switch-control {
-        &::before {
-            background-color: $indicator-bg;
-        }
-    }
-
+@mixin switch-variant($active-indicator-bg) {
     .switch-input {
         &:checked ~ .switch-control {
-            background-color: $active-control-bg;
-
             &::before {
                 background-color: $active-indicator-bg;
             }
