--- a/scss/core/_buttons.scss
+++ b/scss/core/_buttons.scss
@@ -66,9 +66,11 @@ fieldset:disabled a.btn,
 }
 
 // Contextual color variants
-@each $theme, $colors in $btn-themes {
-    .btn-#{$theme} {
-        @include button-variant-control($theme, $colors);
+@if (type-of($btn-themes) == "map" and length($btn-themes) != 0) {
+    @each $theme, $colors in $btn-themes {
+        .btn-#{$theme} {
+            @include button-variant-control($theme, $colors);
+        }
     }
 }
 
@@ -76,9 +78,12 @@ fieldset:disabled a.btn,
 .btn-outline {
     @include button-variant($btn-default-color, $btn-outline-bg, $btn-default-border-color, $btn-default-hover-color, $btn-default-hover-bg, $btn-default-hover-border-color, $btn-default-active-hover-color, $btn-default-active-hover-bg);
 }
-@each $theme, $colors in $btn-themes {
-    .btn-outline-#{$theme} {
-        @include button-variant-control-outline($theme, $colors, $btn-outline-bg);
+
+@if (type-of($btn-outline-themes) == "map" and length($btn-outline-themes) != 0) {
+    @each $theme, $colors in $btn-outline-themes {
+        .btn-outline-#{$theme} {
+            @include button-variant-control-outline($theme, $colors, $btn-outline-bg);
+        }
     }
 }
 
