--- a/scss/component/_alert.scss
+++ b/scss/component/_alert.scss
@@ -29,16 +29,18 @@
 }
 
 // Contextual modifiers
-@each $theme, $colors in $alert-themes {
-    $bg:          map-get($colors, "bg");
-    $color:       map-get($colors, "color");
-    $border:      map-get($colors, "border-color");
-    $hover-color: map-get($colors, "hover-color");
+@if (type-of($alert-themes) == "map" and length($alert-themes) != 0) {
+    @each $theme, $colors in $alert-themes {
+        $bg:          map-get($colors, "bg");
+        $color:       map-get($colors, "color");
+        $border:      map-get($colors, "border-color");
+        $hover-color: map-get($colors, "hover-color");
 
-    $color:       color-if-contrast($color, $bg);
-    $hover-color: color-if-contrast($hover-color, $bg);
+        $color:       color-if-contrast($color, $bg);
+        $hover-color: color-if-contrast($hover-color, $bg);
 
-    .alert-#{$theme} {
-        @include alert-variant($color, $bg, $border, $hover-color);
+        .alert-#{$theme} {
+            @include alert-variant($color, $bg, $border, $hover-color);
+        }
     }
 }
