--- a/scss/component/_badge.scss
+++ b/scss/component/_badge.scss
@@ -62,14 +62,16 @@ a.badge {
 }
 
 // Colors (linked badges get darker on :hover)
-@each $theme, $colors in $badge-themes {
-    $bg:            map-get($colors, "bg");
-    $color:         map-get($colors, "color");
-    $hover-bg:      map-get($colors, "hover-bg");
-    $hover-color:   map-get($colors, "hover-color");
+@if (type-of($badge-themes) == "map" and length($badge-themes) != 0) {
+    @each $theme, $colors in $badge-themes {
+        $bg:            map-get($colors, "bg");
+        $color:         map-get($colors, "color");
+        $hover-bg:      map-get($colors, "hover-bg");
+        $hover-color:   map-get($colors, "hover-color");
 
-    .badge-#{$theme} {
-        @include badge-variant($color, $bg, $bg, $hover-color, $hover-bg, $hover-bg);
+        .badge-#{$theme} {
+            @include badge-variant($color, $bg, $bg, $hover-color, $hover-bg, $hover-bg);
+        }
     }
 }
 
@@ -77,13 +79,15 @@ a.badge {
 .badge-outline {
     @include badge-variant($badge-default-color, $badge-outline-bg, $badge-default-border, $badge-default-hover-color, $badge-default-hover-bg, $badge-default-hover-border);
 }
-@each $theme, $colors in $badge-themes {
-    $bg:            $badge-outline-bg;
-    $color:         map-get($colors, "base");
-    $hover-bg:      map-get($colors, "bg");
-    $hover-color:   map-get($colors, "hover-color");
+@if (type-of($badge-outline-themes) == "map" and length($badge-outline-themes) != 0) {
+    @each $theme, $colors in $badge-outline-themes {
+        $bg:            $badge-outline-bg;
+        $color:         map-get($colors, "base");
+        $hover-bg:      map-get($colors, "bg");
+        $hover-color:   map-get($colors, "hover-color");
 
-    .badge-outline-#{$theme} {
-        @include badge-variant($color, $bg, $hover-bg, $hover-color, $hover-bg, $hover-bg);
+        .badge-outline-#{$theme} {
+            @include badge-variant($color, $bg, $hover-bg, $hover-color, $hover-bg, $hover-bg);
+        }
     }
 }
